--- a/templates/blocks/impression_block_new.html
+++ b/templates/blocks/impression_block_new.html
@@ -18,7 +18,7 @@
 					<{$articlenew.commentz}>
 				<{/if}>
 			</div>
-			<div class="impression_tblcell" style="text-align: center;"><{$articlenew.date}></div>
+			<div class="impression_tblcell" style="text-align: center;"><{$articlenew.published}></div>
 		</div>
 	<{/foreach}>
 </div>
