--- a/templates/blocks/impression_block_news.html
+++ b/templates/blocks/impression_block_news.html
@@ -3,13 +3,13 @@
 	<div class="impression_articleTitle"><{$articlenews.title}></div>
 	<div id="impression_main" class="impression_articleMain">
 		<div style="text-align: right; font-size: 75%; margin-right: 5px;">
-			<{$smarty.const._MB_IMPRESSION_PUBLISHEDON}><{$articlenews.date|wordwrap:50:"\n":true}><{$smarty.const._MB_IMPRESSION_BY}><{$articlenews.submitter}>&nbsp;<{$articlenews.hits|wordwrap:50:"\n":true}>
+			<{$smarty.const._MB_IMPRESSION_PUBLISHEDON}><{$articlenews.published|wordwrap:50:"\n":true}><{$smarty.const._MB_IMPRESSION_BY}><{$articlenews.submitter}>&nbsp;<{$articlenews.hits|wordwrap:50:"\n":true}>
 		</div>
 		<{$articlenews.introtext}>
 	</div>
 	<div class="impression_articleFooter">
 		<span style="float: left;">
-			<{if $articlenews.bytesmore > 0}>&nbsp;<{$articlenews.readmore}>
+			<{if $articlenews.bytesmore > 0}>&nbsp;<i><{$articlenews.readmore}></i>
 				<{if $articlenews.options == 1}>&nbsp;|&nbsp;<{$articlenews.bytesmore}>&nbsp;<{$smarty.const._MB_IMPRESSION_BYTESMORE}><{/if}>
 				<{if $articlenews.options == 2}>&nbsp;|&nbsp;<{$articlenews.description|count_words}>&nbsp;<{$smarty.const._MB_IMPRESSION_WORDSMORE}><{/if}>
 				<{if $articlenews.options == 3}>&nbsp;|&nbsp;<{$articlenews.description|count_characters}>&nbsp;<{$smarty.const._MB_IMPRESSION_CHARSMORE}><{/if}>
