--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -73,13 +73,15 @@
 <div style="text-align: center; margin-top: 10px;"><{$commentsnav}><{$lang_notice}></div>
 
 <!-- start comments loop -->
-<{if $comment_mode == "flat"}> 
-	<a name="comments"><{include file="db:system_comments_flat.html"}></a> 
-<{elseif $comment_mode == "thread"}> 
-	<a name="comments"><{include file="db:system_comments_thread.html"}></a>
-<{elseif $comment_mode == "nest"}> 
-	<a name="comments"><{include file="db:system_comments_nest.html"}></a>
-<{/if}> 
+<div>
+	<{if $comment_mode == "flat"}>
+	<{include file="db:system_comments_flat.html"}>
+	<{elseif $comment_mode == "thread"}>
+	<{include file="db:system_comments_thread.html"}>
+	<{elseif $comment_mode == "nest"}>
+	<{include file="db:system_comments_nest.html"}>
+	<{/if}>
+</div>
 <!-- end comments loop -->
 
 <{include file="db:system_notification_select.html"}>
